--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,14 @@
-[tool.poetry]
-name = "raw-file-manager"
+[project]
+name = "nef-file-manager"
 version = "0.1.0"
-description = ""
-authors = ["Rey Marin Jr. <rey.marin@gmail.com>"]
+description = "Add your description here"
+readme = "README.md"
+requires-python = ">=3.13"
+dependencies = [
+    "exif>=1.6.1",
+]
 
-[tool.poetry.dependencies]
-python = "^3.12"
-exif = "1.6.0"
-
-[tool.poetry.dev-dependencies]
-pytest = "^5.2"
-
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
+[dependency-groups]
+dev = [
+    "pytest>=8.3.5",
+]
